--- a/views/layout.pug
+++ b/views/layout.pug
@@ -10,7 +10,7 @@ html(lang='en')
  body
     .container-fluid
         nav.navbar.navbar-expand-lg.bg-dark.navbar-dark.sticky-top
-            a.navbar-brand(href="#") freshNews
+            a.navbar-brand(href="#") goodNews
             button.navbar-toggler(type="button" data-toggle="collapse" data-target="#collapsibleNavbar")
               span.navbar-toggler-icon
             div.collapse.navbar-collapse(id="collapsibleNavbar")
